KOGITO-5816 - Enable Native test execution for process and add missing classes to native reflection (#1578)